[project]
name = "johnny-appleseed"
version = "0.0.1"
authors = [
  { name="Carson Koball", email="carson.koball@trojans.dsu.edu" },
]
description = "A tool for interpreting decision trees."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]